tests/fixtures/invalid/none_bitand_set.py
# Cannot bitwise AND None and Set[int]
x: None = None & {1, 2, 3}
